NEWS
9
* New translations

7
ENHACEMENT:
* Ignacio Rodríguez port to GTK3

6
* New translations

5
* New translations

4
* New button artwork
* Eliminated unnecessary rotate feature
* Sorted colors in spiral from "calm" to "exciting"
* Drag to repostion dots and XO man (positions saved in Journal)

3
* Rebased on Python
* Spiral layout of all color combinations
* Saves new colors (in most Sugar environments)

2
* Initial release as a Javascript program run inside of Browse