@@ -3,7 +3,7 @@ name = xoEditor
 exec = sugar-activity XOEditorActivity.XOEditorActivity
 bundle_id = org.laptop.xoEditorActivity
 icon = activity-xo-editor
-activity_version = 9
+activity_version = 10
 show_launcher = yes
 license = GPLv3
 summary = select colors for your XO icon
